Toggle overflow fix

--- a/src/app/components/toggle/toggle.component.scss
+++ b/src/app/components/toggle/toggle.component.scss
@@ -11,7 +11,6 @@
 
     display: flex;
     flex-direction: column;
-    overflow: hidden;
   }
 }
 
